--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,13 @@ dist.jar=${dist.dir}/MatroxCompiler.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.java-cup-11a.jar=libs\\java-cup-11a.jar
+file.reference.jflex-1.6.0.jar=libs\\jflex-1.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JFlex.classpath}
+    ${file.reference.jflex-1.6.0.jar}:\
+    ${file.reference.java-cup-11a.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
