--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.java-cup-11a.jar=libs\\java-cup-11a.jar
+file.reference.java-cup-11b-runtime.jar=libs\\java-cup-11b-runtime.jar
 file.reference.jflex-1.6.0.jar=libs\\jflex-1.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jflex-1.6.0.jar}:\
-    ${file.reference.java-cup-11a.jar}
+    ${file.reference.java-cup-11a.jar}:\
+    ${file.reference.java-cup-11b-runtime.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
