--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,9 @@ dist.jar=${dist.dir}/MatroxCompiler.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jflex-1.6.0.jar=libs\\jflex-1.6.0.jar
-file.reference.jtb132.jar=libs\\jtb132.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.jflex-1.6.0.jar}:\
-    ${file.reference.jtb132.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
